Alignment Fix

--- a/styles/responsive.module.css
+++ b/styles/responsive.module.css
@@ -17,7 +17,8 @@
   
 @media only screen and (max-width: 680px){
     .small{
-        visibility: hidden;
+        /* visibility: hidden; */
+        display: none;
     }
 }
 /* @media only screen and (min-width: 1200px){
